@@ -1,4 +1,4 @@
-.\"	$NetBSD: rtadvd.8,v 1.24 2012/12/13 21:49:38 wiz Exp $
+.\"	$NetBSD: rtadvd.8,v 1.25 2016/12/16 09:09:38 ozaki-r Exp $
 .\"	$KAME: rtadvd.8,v 1.24 2002/05/31 16:16:08 jinmei Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -28,7 +28,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 13, 2006
+.Dd December 16, 2016
 .Dt RTADVD 8
 .Os
 .Sh NAME
@@ -39,6 +39,7 @@
 .Op Fl DdfRs
 .Op Fl c Ar configfile
 .Op Fl M Ar ifname
+.Op Fl p Ar pidfile
 .Ar interface ...
 .Sh DESCRIPTION
 .Nm
@@ -140,6 +141,13 @@ option, which enables routing renumbering protocol support.
 .\"Enables mobile IPv6 support.
 .\"This changes the content of router advertisement option, as well as
 .\"permitted configuration directives.
+.It Fl p Ar pidfile
+Specify an alternate location,
+.Ar pidfile ,
+for the PID file.
+By default,
+.Pa /var/run/rtadvd.pid
+is used.
 .It Fl R
 Accept router renumbering requests.
 If you enable it, an
